<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Thric3</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="button_solitaire">Solitaire</string>
    <string name="button_start_game">Start Game</string>
    <string name="button_vs_ai">vs. AI</string>
    <string name="button_help">Help</string>
    <string name="button_show_manual">Manual</string>
    <string name="button_next_hint">Next Hint</string>
    <string name="button_about">About</string>
    <string name="label_score">Score</string>
    <string name="label_cards_left">Deck</string>
    <string name="item_1_player">1 Player</string>
    <string name="item_2_players">2 Players</string>
    <string name="item_3_players">3 Players</string>
    <string name="name_player1">Player 1</string>
    <string name="name_player2">Player 2</string>
    <string name="name_player3">Player 3</string>
    <string name="toast_select">Select three cards</string>
    <string name="toast_no_cards_left">There are no cards left</string>
    <string name="toast_not_your_turn">It is not your turn</string>
    <string name="toast_locked">You are locked until the next Set has been called</string>
    <string name="toast_valid">Correct</string>
    <string name="toast_no_valid">That is no valid set</string>
    <string name="toast_no_valid_locked">That is no valid Set, you are locked until the next Set has been called</string>
    <string name="toast_call_first">Hit your button first</string>
    <string name="toast_consists_of_three_cards">A valid Set consists of three cards</string>
    <string name="dialog_title_number_of_players">Number of Players</string>
    <string name="tutorial_dialog_title_correct">Valid Set found</string>
    <string name="tutorial_dialog_title_wrong">Not a valid Set</string>
    <string name="tutorial_explanation_correct">You found a valid Set. These three cards have been added to your score.</string>
    <string name="tutorial_explanation_wrong">This is not a valid Set. In Multiplayer Mode you would now be locked until the next Set has been called.</string>
    <string name="tutorial_colors">Colors:</string>
    <string name="tutorial_shapes">Shapes:</string>
    <string name="tutorial_numbers">Numbers:</string>
    <string name="tutorial_fillings">Fillings:</string>
    <string name="tutorial_ok">✔</string>
    <string name="tutorial_not_ok">✘</string>
    <string name="tutorial_hint_title">Hint</string>
    <string name="tutorial_hint_0_text">To start the game, deal 12 cards\nby tapping on the deck in the top\nright corner of the screen.</string>
    <string name="ok">OK</string>
    <string name="manual_introduction">The objective of this game is to find as many valid Sets as possible. A valid Set consists of three cards with special properties as explained below.</string>
    <string name="manual_card">The game is played with 81 cards. Each card has four properties which can have three values each:</string>
    <string name="manual_properties">Color: red, green or blue\nShape: clubs, hearts or diamonds\nNumber: one, two or three\nFilling: empty, half or full</string>
    <string name="manual_valid">A valid Set consists of three cards which are either all equal or all different in each of these four properties. This is an example of a valid Set.</string>
    <string name="manual_invalid">This is not a valid Set, because two of these cards are green and one is blue. The tutorial can help you learn how to recognize valid Sets.</string>
    <string name="manual_call">If you have found a valid Set, press this button and select the three cards you found. Then press the button again to confirm. In multiplayer mode you have 15 seconds to do that.</string>
    <string name="manual_deal">If you cannot find any valid Sets, press this button to deal three additional cards. Up to 21 cards can be in the game at the same time. 21 cards always contain at least one valid Set.</string>
    <string name="manual_title">Manual</string>
    <string name="dialog_game_over_title">Final Score</string>
    <string name="dialog_game_over_text">There are no valid Sets left in the game. Final Score:</string>
    <string name="button_back_to_menu">Back to Menu</string>
    <string name="button_replay">Play Again</string>
    <string name="fmt_seconds_left">%1$d seconds left</string>
    <string name="time_out">Timeout. You are now locked.</string>
</resources>
