<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_table"
    >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_weight="2"
        android:layout_margin="10dp"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <Button
            style="@style/menu_button"
            android:onClick="onButtonTutorial"
            android:text="@string/button_tutorial"
            />
        <Button
            style="@style/menu_button"
            android:onClick="onButtonStartGame"
            android:text="@string/button_start_game"
            />
        <Button
            style="@style/menu_button"
            android:onClick="onButtonHelp"
            android:text="@string/button_help"
            />
    </LinearLayout>
</LinearLayout>

